크롤링할 페이지에 접속하기 위한 접속 객체를 생성하고 설정한 URL에서 정보를 추출할 수 있는지 print(r.text)을 사용해 확인

--- a/project_melon_test.ipynb
+++ b/project_melon_test.ipynb
@@ -27,7 +27,37 @@
     "for p in params:\n",
     "    # 수집할 컨텐츠가 있는 웹 페이지 주소\n",
     "    url = f'https://www.melon.com/chart/{p}/index.htm'\n",
-    "    # print(url)\n"
+    "    # print(url)\n",
+    "\n",
+    "\n",
+    "    # 브라우저 버전정보\n",
+    "    userAgent = 'Mozilla/5.0 (Windows NT 10.0; Win64; x64)AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36'\n",
+    "\n",
+    "    # 접속 객체 생성\n",
+    "    # request는 직접 header 정보 갱신이 불가능해 session 생성\n",
+    "    session = requests.Session()\n",
+    "\n",
+    "    # 접속 객체에 부가정보(header) 삽입\n",
+    "    session.headers.update({\n",
+    "        \"Referer\": \"\",\n",
+    "        \"User-Agent\": userAgent\n",
+    "    })\n",
+    "\n",
+    "    # 생성한 접속 객체를 활용해 웹 페이지에 접속\n",
+    "    # 지정된 URL에 GET 요청을 보내고\n",
+    "    # 그에 대한 응답을 r 변수에 할당\n",
+    "    r = session.get(url)\n",
+    "\n",
+    "    # 접속 실패 시 에러 코드와 에러 메시지 출력\n",
+    "    if r.status_code != 200:\n",
+    "        msg = \"[%d Error] %s 에러 발생\" % (r.status_code, r.reason)\n",
+    "        raise Exception(msg)\n",
+    "\n",
+    "    # 인코딩 형식을 지정해 beautifulsoup 객체를 생성\n",
+    "    r.encoding = 'utf-8'\n",
+    "\n",
+    "    # r 변수에 저장된 text 정보를 시각화, 확인\n",
+    "    # print(r.text)"
    ]
   },
   {
