추출할 음원의 수(반복문의 횟수)를 확인하기 위해 음악 이름을 나타내는 class 정보를 이용해 반복문 횟수를 설정한다

--- a/project_melon_test.ipynb
+++ b/project_melon_test.ipynb
@@ -57,7 +57,23 @@
     "    r.encoding = 'utf-8'\n",
     "\n",
     "    # r 변수에 저장된 text 정보를 시각화, 확인\n",
-    "    # print(r.text)"
+    "    # print(r.text)\n",
+    "\n",
+    "\n",
+    "    # r.text에서 HTML을 파싱하고,\n",
+    "    # 파싱된 HTML을 나타내는\n",
+    "    # BeautifulSoup 객체 soup를 생성\n",
+    "    soup = BeautifulSoup(r.text)\n",
+    "    # print(soup)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # 추출할 음원의 수를 확인하기 위해 음악 이름을 나타내는\n",
+    "    # .ellipsis.rank01의 수를 확인\n",
+    "    melon_list = soup.select(\".ellipsis.rank01\")\n",
+    "    # len(melon_list)\n",
+    "\n",
+    "\n"
    ]
   },
   {
