반복문을 사용해 1~100 순위의 데이터를 추출하고 이를 dict 형식으로 변형해 저장하는 코드를 생성

--- a/project_melon_test.ipynb
+++ b/project_melon_test.ipynb
@@ -73,6 +73,23 @@
     "    melon_list = soup.select(\".ellipsis.rank01\")\n",
     "    # len(melon_list)\n",
     "\n",
+    "\n",
+    "    for i in range(len(melon_list)):\n",
+    "        # 노래 추출\n",
+    "        songEl = soup.select('.ellipsis.rank01 > span > a')\n",
+    "        song = songEl[i].text.strip()\n",
+    "\n",
+    "        # 가수 추출\n",
+    "        singerEl = soup.select('.ellipsis.rank02 > a')\n",
+    "        singer = singerEl[i].text.strip()\n",
+    "        \n",
+    "        # 앨범 추출\n",
+    "        albumEl = soup.select('.ellipsis.rank03 > a')\n",
+    "        album = albumEl[i].text.strip()\n",
+    "\n",
+    "        item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album}\n",
+    "        melon_chart.append(item)\n",
+    "\n",
     "\n"
    ]
   },
