순위를 나타내기 위해 rank라는 변수를 반복문을 사용해 값을 할당하는 코드를 생성

--- a/project_melon_test.ipynb
+++ b/project_melon_test.ipynb
@@ -87,10 +87,11 @@
     "        albumEl = soup.select('.ellipsis.rank03 > a')\n",
     "        album = albumEl[i].text.strip()\n",
     "\n",
-    "        item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album}\n",
-    "        melon_chart.append(item)\n",
+    "        # 순위\n",
+    "        rank =+ (1+i)\n",
     "\n",
-    "\n"
+    "        item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album, \"순위\" : rank}\n",
+    "        melon_chart.append(item)\n"
    ]
   },
   {
