수집한 데이터를 index를 없애고 xlsx 형태로 저장(xlsx 파일은 삭제함)

--- a/project_melon_test.ipynb
+++ b/project_melon_test.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,8 @@
     "        rank =+ (1+i)\n",
     "\n",
     "        item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album, \"순위\" : rank}\n",
-    "        melon_chart.append(item)\n"
+    "        melon_chart.append(item)\n",
+    "melon_chart"
    ]
   },
   {
@@ -99,7 +100,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = DataFrame(melon_chart)\n",
+    "# 순위를 우선해서 보여주기 위해 index로 설정\n",
+    "df.to_excel('확인용.xlsx', index=False)"
+   ]
   }
  ],
  "metadata": {
