이전 commit에서 실패한 순위를 index로 설정하는 코드를 생성 후 xlsx 형태로 저장하는 코드를 추가 및 수정

--- a/project_melon_test.ipynb
+++ b/project_melon_test.ipynb
@@ -97,14 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = DataFrame(melon_chart)\n",
     "# 순위를 우선해서 보여주기 위해 index로 설정\n",
-    "df.to_excel('확인용.xlsx', index=False)"
+    "df.set_index('순위',inplace=True)\n",
+    "df.to_excel('확인용.xlsx')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
