기본 개념은 project_melon_test.ipynb와 동일하나 초반의 반복문에 enumerate를 활용해 날짜별 데이터를 분리해서 생성할 수 있도록 유도

--- a/project_melon_test2.ipynb
+++ b/project_melon_test2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,72 @@
     "melon_chart = []\n",
     "melon_chart_day = []\n",
     "melon_chart_week = []\n",
-    "melon_chart_month = []\n"
+    "melon_chart_month = []\n",
+    "\n",
+    "\n",
+    "# 실시간, 일, 주, 월별 데이터를 저장할 list 생성\n",
+    "chart_list = [melon_chart, melon_chart_day, melon_chart_week, melon_chart_month]\n",
+    "\n",
+    "for i, param in enumerate(params):\n",
+    "    # 수집할 컨텐츠가 있는 웹 페이지 주소\n",
+    "    url = f'https://www.melon.com/chart/{param}/index.htm'\n",
+    "\n",
+    "    # 브라우저 버전정보\n",
+    "    userAgent = 'Mozilla/5.0 (Windows NT 10.0; Win64; x64)AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36'\n",
+    "\n",
+    "    # 접속 객체 생성\n",
+    "    # request는 직접 header 정보 갱신이 불가능해 session 생성\n",
+    "    session = requests.Session()\n",
+    "\n",
+    "    # 접속 객체에 부가정보(header) 삽입\n",
+    "    session.headers.update({\n",
+    "        \"Referer\": \"\",\n",
+    "        \"User-Agent\": userAgent\n",
+    "    })\n",
+    "\n",
+    "    # 생성한 접속 객체를 활용해 웹 페이지에 접속\n",
+    "    # 지정된 URL에 GET 요청을 보내고\n",
+    "    # 그에 대한 응답을 r 변수에 할당\n",
+    "    r = session.get(url)\n",
+    "\n",
+    "    # 접속 실패 시 에러 코드와 에러 메시지 출력\n",
+    "    if r.status_code != 200:\n",
+    "        msg = \"[%d Error] %s 에러 발생\" % (r.status_code, r.reason)\n",
+    "        raise Exception(msg)\n",
+    "\n",
+    "    # 인코딩 형식을 지정해 beautifulsoup 객체를 생성\n",
+    "    r.encoding = 'utf-8'\n",
+    "\n",
+    "    # r 변수에 저장된 text 정보를 시각화, 확인\n",
+    "    # print(r.text)\n",
+    "\n",
+    "    # r.text에서 HTML을 파싱하고,\n",
+    "    # 파싱된 HTML을 나타내는\n",
+    "    # BeautifulSoup 객체 soup를 생성\n",
+    "    soup = BeautifulSoup(r.text)\n",
+    "\n",
+    "    # 추출할 음원의 수를 확인하기 위해 음악 이름을 나타내는\n",
+    "    # .ellipsis.rank01의 수를 확인\n",
+    "    melon_list = soup.select(\".ellipsis.rank01\")\n",
+    "\n",
+    "    for j in range(len(melon_list)):\n",
+    "        # 노래 추출\n",
+    "        songEl = soup.select('.ellipsis.rank01 > span > a')\n",
+    "        song = songEl[j].text.strip()\n",
+    "\n",
+    "        # 가수 추출\n",
+    "        singerEl = soup.select('.ellipsis.rank02 > a')\n",
+    "        singer = singerEl[j].text.strip()\n",
+    "\n",
+    "        # 앨범 추출\n",
+    "        albumEl = soup.select('.ellipsis.rank03 > a')\n",
+    "        album = albumEl[j].text.strip()\n",
+    "\n",
+    "        # 순위\n",
+    "        rank = j + 1\n",
+    "\n",
+    "        item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album, \"순위\": rank}\n",
+    "        chart_list[i].append(item)\n"
    ]
   }
  ],
