에러발생 순위가 없다고 나옴

--- a/project_melon_test2.ipynb
+++ b/project_melon_test2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,8 +91,28 @@
     "        rank = j + 1\n",
     "\n",
     "        item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album, \"순위\": rank}\n",
-    "        chart_list[i].append(item)\n"
+    "        chart_list[i].append(item)\n",
+    "chart_list"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = DataFrame(chart_list)\n",
+    "# 순위를 우선해서 보여주기 위해 index로 설정\n",
+    "df.set_index('순위',inplace=True)\n",
+    "df.to_excel('확인용.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
