추출 성공 : 위에서  생성된 각각의 chart 별로 정리를 하고 시각화 처리를  해줘야함

--- a/project_melon_test2.ipynb
+++ b/project_melon_test2.ipynb
@@ -97,14 +97,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = DataFrame(chart_list)\n",
+    "# 생성된 각각의 chart별로 정리를 해줘야함\n",
+    "df_melon_chart = pd.DataFrame(melon_chart)\n",
+    "df_melon_chart_day = pd.DataFrame(melon_chart_day)\n",
+    "df_melon_chart_week = pd.DataFrame(melon_chart_week)\n",
+    "df_melon_chart_month = pd.DataFrame(melon_chart_month)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 순위를 우선해서 보여주기 위해 index로 설정\n",
-    "df.set_index('순위',inplace=True)\n",
-    "df.to_excel('확인용.xlsx')"
+    "df_melon_chart.set_index('순위', inplace=True)\n",
+    "df_melon_chart_day.set_index('순위', inplace=True)\n",
+    "df_melon_chart_week.set_index('순위', inplace=True)\n",
+    "df_melon_chart_month.set_index('순위', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 각각의 데이터를 별도의 xlsx 파일로 저장\n",
+    "df_melon_chart.to_excel('확인용_100.xlsx')\n",
+    "df_melon_chart_day.to_excel('확인용_day.xlsx')\n",
+    "df_melon_chart_week.to_excel('확인용_week.xlsx')\n",
+    "df_melon_chart_month.to_excel('확인용_month.xlsx')"
    ]
   },
   {
