이전과 동일하게 제목, 가수, 앨범 정도등을 수집(순위는 페이지가 나뉘어여 1~50위가 2번 반복되므로 1~100 순위가 추출 되도록 rank 변수를 고칠 필요가 있어보임

--- a/project_genie_test.ipynb
+++ b/project_genie_test.ipynb
@@ -66,7 +66,59 @@
     "    # 파싱된 HTML을 나타내는\n",
     "    # BeautifulSoup 객체 soup를 생성\n",
     "    soup = BeautifulSoup(r.text)\n",
-    "    print(soup)"
+    "    # print(soup)\n",
+    "\n",
+    "        # 추출할 음원의 수를 확인하기 위해 재생 버튼을 나타내는\n",
+    "    # .btn-basic.btn-listen의 수를 확인해 반복할 횟수를 정한다\n",
+    "    # 재생 버튼은 음원에만 존재하기 때문에 .btn-basic.btn-listen 사용\n",
+    "    genie_list = soup.select(\".btn-basic.btn-listen\")\n",
+    "    # len(genie_list)\n",
+    "    # print(len(genie_list))\n",
+    "\n",
+    "\n",
+    "    for i in range(len(genie_list)):\n",
+    "\n",
+    "        # 제목 추출\n",
+    "        songEl = soup.select('.title.ellipsis')\n",
+    "        song = songEl[i].text.strip()\n",
+    "        # print(song)\n",
+    "        \n",
+    "\n",
+    "        # 가수 추출\n",
+    "        singerEl = soup.select('.artist.ellipsis')\n",
+    "        singer = singerEl[i].text.strip()\n",
+    "        # print(singer)\n",
+    "        \n",
+    "\n",
+    "        # 앨범 추출\n",
+    "        albumEl = soup.select('.albumtitle.ellipsis')\n",
+    "        album = albumEl[i].text.strip()\n",
+    "        # print(album)\n",
+    "\n",
+    "\n",
+    "        # 순위\n",
+    "        rank = i+1\n",
+    "\n",
+    "\n",
+    "        # 추출한 데이터를 dict 형태로 변환\n",
+    "        item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album, \"순위\" : rank}\n",
+    "        genie_chart.append(item)\n",
+    "        \n",
+    "genie_chart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = DataFrame(genie_chart)\n",
+    "\n",
+    "# 순위를 우선해서 보여주기 위해 index로 설정\n",
+    "df.set_index('순위',inplace=True)\n",
+    "# df\n",
+    "df.to_excel(\"확인용.xlsx\")"
    ]
   },
   {
