각 페이지마다 순위를 다르게 도출하는 코드를 rank 변수에 추가해 데이터의 index로 사용할 순위를 1~100 형태로 도출할 수 있도록 코드 수정 성공

--- a/project_genie_test.ipynb
+++ b/project_genie_test.ipynb
@@ -97,7 +97,7 @@
     "\n",
     "\n",
     "        # 순위\n",
-    "        rank = i+1\n",
+    "        rank = (int(p)-1) * 50 + (i+1)\n",
     "\n",
     "\n",
     "        # 추출한 데이터를 dict 형태로 변환\n",
