가독성과 설명을 위해 각 코드에 주석을 추가

--- a/project_genie_test.ipynb
+++ b/project_genie_test.ipynb
@@ -15,9 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "50\n"
+     ]
+    }
+   ],
    "source": [
     "# 수집할 음원 사이트의 주소 페이지 설정\n",
     "# 1~50, 51~100으로 2개의 페이지로 나눠져 있음\n",
@@ -68,35 +77,50 @@
     "    soup = BeautifulSoup(r.text)\n",
     "    # print(soup)\n",
     "\n",
-    "        # 추출할 음원의 수를 확인하기 위해 재생 버튼을 나타내는\n",
+    "\n",
+    "\n",
+    "    # 추출할 음원의 수를 확인하기 위해 재생 버튼을 나타내는\n",
     "    # .btn-basic.btn-listen의 수를 확인해 반복할 횟수를 정한다\n",
     "    # 재생 버튼은 음원에만 존재하기 때문에 .btn-basic.btn-listen 사용\n",
+    "    \n",
     "    genie_list = soup.select(\".btn-basic.btn-listen\")\n",
-    "    # len(genie_list)\n",
+    "\n",
+    "    # 반복문의 길이로 사용하기 적합한지 확인\n",
     "    # print(len(genie_list))\n",
+    "    \n",
+    "\n",
+    "    # .number도 사용 가능함\n",
+    "    # genie_list = soup.select(\".number\")\n",
+    "    # print(len(genie_list))\n",
+    "\n",
     "\n",
     "\n",
     "    for i in range(len(genie_list)):\n",
     "\n",
     "        # 제목 추출\n",
+    "        # 제목의 class는 title ellipsis였음\n",
     "        songEl = soup.select('.title.ellipsis')\n",
     "        song = songEl[i].text.strip()\n",
     "        # print(song)\n",
     "        \n",
     "\n",
     "        # 가수 추출\n",
+    "        # 가수의 class는 artist ellipsis\n",
     "        singerEl = soup.select('.artist.ellipsis')\n",
     "        singer = singerEl[i].text.strip()\n",
     "        # print(singer)\n",
     "        \n",
     "\n",
     "        # 앨범 추출\n",
+    "        # 앨범의 class는 albumtitle ellipsis\n",
     "        albumEl = soup.select('.albumtitle.ellipsis')\n",
     "        album = albumEl[i].text.strip()\n",
     "        # print(album)\n",
     "\n",
     "\n",
     "        # 순위\n",
+    "        # 각 페이지 별로 순위가 다르게 입력되도록 유도\n",
+    "        # 1페이지는 1~50, 2페이지는 51~100으로 유도\n",
     "        rank = (int(p)-1) * 50 + (i+1)\n",
     "\n",
     "\n",
