이번 달 1일 부터 전날 까지의 데이터를 수집하기 위한 datetime 확인

--- a/project_genie_test.ipynb
+++ b/project_genie_test.ipynb
@@ -15,18 +15,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50\n",
-      "50\n"
+      "20230628\n",
+      "20230601\n",
+      "20230627\n"
      ]
     }
    ],
+   "source": [
+    "# 오늘 날짜 구하기\n",
+    "today = dt.date.today()\n",
+    "\n",
+    "# 오늘 날짜 숫자 형식으로 출력\n",
+    "today_number = today.strftime(\"%Y%m%d\")\n",
+    "print(today_number)\n",
+    "\n",
+    "# 이번 달 1일 날짜 구하기\n",
+    "start_month = dt.date(today.year, today.month, 1)\n",
+    "start_month_number = start_month.strftime(\"%Y%m%d\")\n",
+    "print(start_month_number)\n",
+    "\n",
+    "# 어제 날짜 구하기\n",
+    "yesterday = today - dt.timedelta(days=1)\n",
+    "yesterday_number = yesterday.strftime(\"%Y%m%d\")\n",
+    "print(yesterday_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 수집할 음원 사이트의 주소 페이지 설정\n",
     "# 1~50, 51~100으로 2개의 페이지로 나눠져 있음\n",
