날짜가 문자열일 경우 반복문으로 기간을 잡는게 힘들 것 같아서 strftime을 대신할 코드를 생각

--- a/project_genie_test.ipynb
+++ b/project_genie_test.ipynb
@@ -15,13 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2023-06-28\n",
       "20230628\n",
       "20230601\n",
       "20230627\n"
@@ -31,20 +32,21 @@
    "source": [
     "# 오늘 날짜 구하기\n",
     "today = dt.date.today()\n",
+    "print(today)\n",
     "\n",
     "# 오늘 날짜 숫자 형식으로 출력\n",
-    "today_number = today.strftime(\"%Y%m%d\")\n",
-    "print(today_number)\n",
+    "# today_number = today.strftime(\"%Y%m%d\")\n",
+    "# print(today_number)\n",
     "\n",
     "# 이번 달 1일 날짜 구하기\n",
     "start_month = dt.date(today.year, today.month, 1)\n",
-    "start_month_number = start_month.strftime(\"%Y%m%d\")\n",
-    "print(start_month_number)\n",
+    "# start_month_number = start_month.strftime(\"%Y%m%d\")\n",
+    "# print(start_month_number)\n",
     "\n",
     "# 어제 날짜 구하기\n",
     "yesterday = today - dt.timedelta(days=1)\n",
-    "yesterday_number = yesterday.strftime(\"%Y%m%d\")\n",
-    "print(yesterday_number)"
+    "# yesterday_number = yesterday.strftime(\"%Y%m%d\")\n",
+    "# print(yesterday_number)"
    ]
   },
   {
