이번 달 1일 부터 전날 데이터 수집 실행(작동은 하나 시간이 오래 걸림 편집할 필요가 있어보임)

--- a/project_genie_test.ipynb
+++ b/project_genie_test.ipynb
@@ -45,13 +45,7 @@
     "yesterday = today - dt.timedelta(days=1)\n",
     "\n",
     "# 1주일 전 날짜 구하기\n",
-    "week = today - dt.timedelta(days=7)\n",
-    "\n",
-    "# 순수 숫자 형식으로 출력\n",
-    "today_num = today.strftime(\"%Y%m%d\")\n",
-    "start_month_num = start_month.strftime(\"%Y%m%d\")\n",
-    "yesterday_num = yesterday.strftime(\"%Y%m%d\")\n",
-    "week_num = week.strftime(\"%Y%m%d\")"
+    "week = today - dt.timedelta(days=7)"
    ]
   },
   {
@@ -75,8 +69,8 @@
     "# dict 형식의 노래제목, 가수, 앨범, 순위를 담을 빈 list 생성\n",
     "genie_chart = []\n",
     "\n",
-    "# 7일간의 데이터 수집\n",
-    "for i in range(7):\n",
+    "# 날짜별 데이터 수집(이번 달 1일 부터 어제 날짜까지)\n",
+    "for i in range((yesterday - start_month).days + 1):\n",
     "    # 날짜 계산\n",
     "    date = (start_month + dt.timedelta(days=i)).strftime(\"%Y%m%d\")\n",
     "    \n",
@@ -169,6 +163,7 @@
     "            # 각 페이지 별로 순위가 다르게 입력되도록 유도\n",
     "            # 1페이지는 1~50, 2페이지는 51~100으로 유도\n",
     "            rank = (int(p)-1) * 50 + (i+1)\n",
+    "\n",
     "\n",
     "            # 추출한 데이터를 dict 형태로 변환\n",
     "            item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album, \"순위\" : rank}\n",
