특정 날짜에 추출한 데이터에 해당 날짜를 부여하기 위해 item의 딕셔너리에 날짜 : date를 삽입했지만 하나의 날짜만 추출(100개마다 다른 날짜가 삽입되어야함)

--- a/project_genie_test.ipynb
+++ b/project_genie_test.ipynb
@@ -61,13 +61,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# 수집할 음원 사이트의 주소 페이지 설정\n",
     "# 1~50, 51~100으로 2개의 페이지로 나눠져 있음\n",
@@ -173,7 +166,7 @@
     "\n",
     "\n",
     "            # 추출한 데이터를 dict 형태로 변환\n",
-    "            item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album, \"순위\" : rank}\n",
+    "            item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album, \"순위\" : rank, \"날짜\" : date}\n",
     "\n",
     "            # dict 정보를 genie_chart에 삽입\n",
     "            genie_chart.append(item)\n",
