--- a/project_genie_test.ipynb
+++ b/project_genie_test.ipynb
@@ -37,14 +37,17 @@
    "source": [
     "# 오늘 날짜 구하기\n",
     "today = dt.date.today()\n",
+    "# 오늘 날짜 숫자 형식으로 출력\n",
+    "today_number = today.strftime(\"%Y%m%d\")\n",
     "# 이번 달 1일 날짜 구하기\n",
     "start_month = dt.date(today.year, today.month, 1)\n",
     "# 어제 날짜 구하기\n",
     "yesterday = today - dt.timedelta(days=1)\n",
-    "# 1주일 전 날짜 구하기\n",
-    "week = today - dt.timedelta(days=7)\n",
     "# 이번 달 1일 부터 어제 날짜까지 구하기\n",
-    "length = (yesterday - start_month).days + 1"
+    "delta = yesterday - start_month\n",
+    "length = (delta.days + 1)\n",
+    "# 날짜 추출\n",
+    "days=int(today_number)"
    ]
   },
   {
@@ -132,37 +135,39 @@
     "        # print(len(genie_list))\n",
     "        \n",
     "\n",
-    "        for i in range(len(genie_list)):\n",
+    "        for j in range(len(genie_list)):\n",
     "\n",
     "            # 제목 추출\n",
     "            # 제목의 class는 title ellipsis였음\n",
     "            songEl = soup.select('.title.ellipsis')\n",
-    "            song = songEl[i].text.strip()\n",
+    "            song = songEl[j].text.strip()\n",
     "            # print(song)\n",
     "            \n",
     "\n",
     "            # 가수 추출\n",
     "            # 가수의 class는 artist ellipsis\n",
     "            singerEl = soup.select('.artist.ellipsis')\n",
-    "            singer = singerEl[i].text.strip()\n",
+    "            singer = singerEl[j].text.strip()\n",
     "            # print(singer)\n",
     "            \n",
     "\n",
     "            # 앨범 추출\n",
     "            # 앨범의 class는 albumtitle ellipsis\n",
     "            albumEl = soup.select('.albumtitle.ellipsis')\n",
-    "            album = albumEl[i].text.strip()\n",
+    "            album = albumEl[j].text.strip()\n",
     "            # print(album)\n",
     "\n",
     "\n",
     "            # 순위 설정\n",
     "            # 각 페이지 별로 순위가 다르게 입력되도록 유도\n",
     "            # 1페이지는 1~50, 2페이지는 51~100으로 유도\n",
-    "            rank = (int(p)-1) * 50 + (i+1)\n",
+    "            rank = (int(p)-1) * 50 + (j+1)\n",
     "\n",
+    "            if rank==1:\n",
+    "                days-=1\n",
     "\n",
     "            # 추출한 데이터를 dict 형태로 변환\n",
-    "            item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album, \"순위\" : rank}\n",
+    "            item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album, \"순위\" : rank, \"날짜\" : str(days)}\n",
     "\n",
     "            # dict 정보를 genie_chart에 삽입\n",
     "            genie_chart.append(item)\n",
