날짜가 반대로 입력되서 days=int(today_number)를 days=int(start_month_number)로 시도하고 for j 문의 if rank의 days-=1을 days+=1로 변경했으나 오류 발생

--- a/project_genie_test.ipynb
+++ b/project_genie_test.ipynb
@@ -41,6 +41,8 @@
     "today_number = today.strftime(\"%Y%m%d\")\n",
     "# 이번 달 1일 날짜 구하기\n",
     "start_month = dt.date(today.year, today.month, 1)\n",
+    "# 이번 달 1일 날짜 숫자 형식으로 출력\n",
+    "# start_month_number = start_month.strftime(\"%Y%m%d\")\n",
     "# 어제 날짜 구하기\n",
     "yesterday = today - dt.timedelta(days=1)\n",
     "# 이번 달 1일 부터 어제 날짜까지 구하기\n",
@@ -194,7 +196,7 @@
     "# 순위를 우선해서 보여주기 위해 index로 설정\n",
     "df.set_index('순위',inplace=True)\n",
     "# df\n",
-    "df.to_excel(\"확인용-1.xlsx\")"
+    "df.to_excel(\"확인용-2.xlsx\")"
    ]
   },
   {
