자세한 확인 결과 각 반복문만다 새로운 페이지가 아닌 같은 페이지의 정보를 파싱하고 있었음 for i 문이랑, for p의 date와 url을 고쳐 문제 해결 완료(날짜만 정확히 입력되도록 유도), 그리고 파일 정리

--- a/project_genie_test.ipynb
+++ b/project_genie_test.ipynb
@@ -73,15 +73,14 @@
     "genie_chart = []\n",
     "\n",
     "# 날짜별 데이터 수집(이번 달 1일 부터 어제 날짜까지)\n",
+    "\n",
     "for i in range(length):\n",
     "    # 날짜 계산\n",
     "    date = (start_month + dt.timedelta(days=i)).strftime(\"%Y%m%d\")\n",
     "    \n",
     "    for p in pages:\n",
-    "        # date = dt.datetime.now().strftime(\"%Y%m%d\")\n",
-    "        \n",
+    "        # 갱신된 날짜로 URL 생성\n",
     "        # 수집할 컨텐츠가 있는 날짜별 웹 페이지 주소\n",
-    "        date = start_month.strftime(\"%Y%m%d\")  # 이번 달 1일부터 하도록 유도\n",
     "        url = f'https://www.genie.co.kr/chart/top200?ditc=D&ymd={date}&hh=09&rtm=N&pg={p}'\n",
     "        # print(url)\n",
     "\n",
@@ -196,7 +195,7 @@
     "# 순위를 우선해서 보여주기 위해 index로 설정\n",
     "df.set_index('순위',inplace=True)\n",
     "# df\n",
-    "df.to_excel(\"확인용-2.xlsx\")"
+    "df.to_excel(\"확인용2.xlsx\")"
    ]
   },
   {
