git 가독성을 위해 test_project_genie_test.ipynb의 결과를 삭제, project_genie_test.ipynb 파일로  project_genie.ipynb파일로 이름 변경, test_project_genie_test.ipynb와 동일 결과가 나오도록 project_genie.ipynb 코드 변경

--- a/project_genie.ipynb
+++ b/project_genie.ipynb
@@ -77,6 +77,7 @@
     "for i in range(length):\n",
     "    # 날짜 계산\n",
     "    date = (start_month + dt.timedelta(days=i)).strftime(\"%Y%m%d\")\n",
+    "    modified_date = (start_month + dt.timedelta(days=i)).strftime(\"%Y%m%d\")[0:6] + \"{:02d}\".format(i + 1)\n",
     "    \n",
     "    for p in pages:\n",
     "        # 갱신된 날짜로 URL 생성\n",
@@ -168,7 +169,7 @@
     "                days-=1\n",
     "\n",
     "            # 추출한 데이터를 dict 형태로 변환\n",
-    "            item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album, \"순위\" : rank, \"날짜\" : str(days)}\n",
+    "            item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album, \"순위\" : rank, \"날짜\" : modified_date}\n",
     "\n",
     "            # dict 정보를 genie_chart에 삽입\n",
     "            genie_chart.append(item)\n",
@@ -195,7 +196,7 @@
     "# 순위를 우선해서 보여주기 위해 index로 설정\n",
     "df.set_index('순위',inplace=True)\n",
     "# df\n",
-    "df.to_excel(\"확인용2.xlsx\")"
+    "df.to_excel(\"genie_chart.xlsx\")"
    ]
   },
   {
