--- a/SeimiProject_main/insert_mysql_bugs.ipynb
+++ b/SeimiProject_main/insert_mysql_bugs.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 시작 전 DB에 table을 미리 생성 후 삽입\n",
-    "# create table bugs (ranking varchar(100), title varchar(100), artist varchar(100), album varchar(100), date_at varchar(100));"
+    "# create table bugs (ranking bigint, date_at varchar(100), title varchar(100), artist varchar(100), album varchar(100));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "excel_file = \"벅스일간차트.xlsx\"\n",
+    "excel_file = \"C:\\\\Users\\\\jehyu\\\\Desktop\\\\semi_project_1\\\\SeimiProject_main\\\\일간차트.xlsx\"\n",
     "\n",
     "conStr=\"mysql+mysqldb://root:1234@localhost/myProject?charset=utf8\"\n",
     "\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,16 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2900"
+       "18000"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
