--- a/!main/1project_genie.ipynb
+++ b/!main/1project_genie.ipynb
@@ -1,11 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 음원사이트 지니에서 음원 데이터를 크롤링\n",
+    "\n",
+    "이번 달 1일 부터 어제 날짜까지의 음원 데이터를 크롤링, 저장"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "패키지 설치"
+    "## #01. 패키지 설치"
    ]
   },
   {
@@ -26,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "날짜 구하기"
+    "## #02. 날짜 구하기"
    ]
   },
   {
@@ -57,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "웹 페이지 데이터 수집 코드"
+    "## #03. 웹 페이지 데이터 수집 코드"
    ]
   },
   {
@@ -165,11 +174,12 @@
     "            # 1페이지는 1~50, 2페이지는 51~100으로 유도\n",
     "            rank = (int(p)-1) * 50 + (j+1)\n",
     "\n",
+    "            # 날짜 추출용(안 하면 하루씩 밀림)\n",
     "            if rank==1:\n",
     "                days-=1\n",
     "\n",
     "            # 추출한 데이터를 dict 형태로 변환\n",
-    "            item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album, \"순위\" : rank, \"날짜\" : modified_date}\n",
+    "            item = {\"날짜\" : modified_date, \"곡명\": song, \"아티스트\": singer, \"앨범명\": album, \"순위\" : rank}\n",
     "\n",
     "            # dict 정보를 genie_chart에 삽입\n",
     "            genie_chart.append(item)\n",
@@ -182,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DataFrame 사용"
+    "## #04. DataFrame 사용해 생성, 저장"
    ]
   },
   {
@@ -196,15 +206,8 @@
     "# 순위를 우선해서 보여주기 위해 index로 설정\n",
     "df.set_index('순위',inplace=True)\n",
     "# df\n",
-    "df.to_excel(\"test2.xlsx\")"
+    "df.to_excel(\"genie_chart.xlsx\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
