--- a/!main/4insert_mysql_bugs.ipynb
+++ b/!main/4insert_mysql_bugs.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 벅스 음원 차트 크롤링 데이터를 Docker를 통해 DB에 삽입한다"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -41,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "excel_file = \"C:\\\\Users\\\\jehyu\\\\Desktop\\\\semi_project_1\\\\SeimiProject_main\\\\일간차트.xlsx\"\n",
+    "excel_file = \"C:\\\\Users\\\\jehyu\\\\Desktop\\\\semi_project_1\\\\SeimiProject_main\\\\벅스일간차트_0601-0629.xlsx\"\n",
     "\n",
     "conStr=\"mysql+mysqldb://root:1234@localhost/myProject?charset=utf8\"\n",
     "\n",
