--- a/programming_test_genie.ipynb
+++ b/programming_test_genie.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 프로그램 동작 확인용"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -165,12 +172,11 @@
     "            # 1페이지는 1~50, 2페이지는 51~100으로 유도\n",
     "            rank = (int(p)-1) * 50 + (j+1)\n",
     "\n",
-    "            # 날짜 추출용(안 하면 하루씩 밀림)\n",
     "            if rank==1:\n",
     "                days-=1\n",
     "\n",
     "            # 추출한 데이터를 dict 형태로 변환\n",
-    "            item = {\"날짜\" : modified_date, \"곡명\": song, \"아티스트\": singer, \"앨범명\": album, \"순위\" : rank}\n",
+    "            item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album, \"순위\" : rank, \"날짜\" : modified_date}\n",
     "\n",
     "            # dict 정보를 genie_chart에 삽입\n",
     "            genie_chart.append(item)\n",
@@ -197,8 +203,15 @@
     "# 순위를 우선해서 보여주기 위해 index로 설정\n",
     "df.set_index('순위',inplace=True)\n",
     "# df\n",
-    "df.to_excel(\"genie_chart.xlsx\")"
+    "df.to_excel(\"test2.xlsx\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
