--- a/melon_parsing_연습/project_melon_test.ipynb
+++ b/melon_parsing_연습/project_melon_test.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 음원사이트 멜론 파싱"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## #01. 패키지 준비"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -22,19 +36,13 @@
     "params = ['', 'day', 'week', 'month']\n",
     "\n",
     "# dict 형식의 노래제목, 가수, 앨범, 순위를 담을 빈 list 생성\n",
-    "# 실시간, 일, 주, 월별 순위를 담을 list를 생성\n",
     "melon_chart = []\n",
-    "melon_chart_day = []\n",
-    "melon_chart_week = []\n",
-    "melon_chart_month = []\n",
     "\n",
-    "\n",
-    "# 실시간, 일, 주, 월별 데이터를 저장할 list 생성\n",
-    "chart_list = [melon_chart, melon_chart_day, melon_chart_week, melon_chart_month]\n",
-    "\n",
-    "for i, param in enumerate(params):\n",
+    "for p in params:\n",
     "    # 수집할 컨텐츠가 있는 웹 페이지 주소\n",
-    "    url = f'https://www.melon.com/chart/{param}/index.htm'\n",
+    "    url = f'https://www.melon.com/chart/{p}/index.htm'\n",
+    "    # print(url)\n",
+    "\n",
     "\n",
     "    # 브라우저 버전정보\n",
     "    userAgent = 'Mozilla/5.0 (Windows NT 10.0; Win64; x64)AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36'\n",
@@ -65,73 +73,52 @@
     "    # r 변수에 저장된 text 정보를 시각화, 확인\n",
     "    # print(r.text)\n",
     "\n",
+    "\n",
     "    # r.text에서 HTML을 파싱하고,\n",
     "    # 파싱된 HTML을 나타내는\n",
     "    # BeautifulSoup 객체 soup를 생성\n",
     "    soup = BeautifulSoup(r.text)\n",
+    "    # print(soup)\n",
+    "\n",
+    "\n",
     "\n",
     "    # 추출할 음원의 수를 확인하기 위해 음악 이름을 나타내는\n",
     "    # .ellipsis.rank01의 수를 확인\n",
     "    melon_list = soup.select(\".ellipsis.rank01\")\n",
+    "    # len(melon_list)\n",
     "\n",
-    "    for j in range(len(melon_list)):\n",
+    "\n",
+    "    for i in range(len(melon_list)):\n",
     "        # 노래 추출\n",
     "        songEl = soup.select('.ellipsis.rank01 > span > a')\n",
-    "        song = songEl[j].text.strip()\n",
+    "        song = songEl[i].text.strip()\n",
     "\n",
     "        # 가수 추출\n",
     "        singerEl = soup.select('.ellipsis.rank02 > a')\n",
-    "        singer = singerEl[j].text.strip()\n",
-    "\n",
+    "        singer = singerEl[i].text.strip()\n",
+    "        \n",
     "        # 앨범 추출\n",
     "        albumEl = soup.select('.ellipsis.rank03 > a')\n",
-    "        album = albumEl[j].text.strip()\n",
+    "        album = albumEl[i].text.strip()\n",
     "\n",
     "        # 순위\n",
-    "        rank = j + 1\n",
+    "        rank =+ (1+i)\n",
     "\n",
-    "        item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album, \"순위\": rank}\n",
-    "        chart_list[i].append(item)\n",
-    "chart_list"
+    "        item = {\"가수\": singer, \"노래 제목\": song, \"앨범\": album, \"순위\" : rank}\n",
+    "        melon_chart.append(item)\n",
+    "melon_chart"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 생성된 각각의 chart별로 정리를 해줘야함\n",
-    "df_melon_chart = pd.DataFrame(melon_chart)\n",
-    "df_melon_chart_day = pd.DataFrame(melon_chart_day)\n",
-    "df_melon_chart_week = pd.DataFrame(melon_chart_week)\n",
-    "df_melon_chart_month = pd.DataFrame(melon_chart_month)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df = DataFrame(melon_chart)\n",
     "# 순위를 우선해서 보여주기 위해 index로 설정\n",
-    "df_melon_chart.set_index('순위', inplace=True)\n",
-    "df_melon_chart_day.set_index('순위', inplace=True)\n",
-    "df_melon_chart_week.set_index('순위', inplace=True)\n",
-    "df_melon_chart_month.set_index('순위', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 각각의 데이터를 별도의 xlsx 파일로 저장\n",
-    "df_melon_chart.to_excel('확인용_100.xlsx')\n",
-    "df_melon_chart_day.to_excel('확인용_day.xlsx')\n",
-    "df_melon_chart_week.to_excel('확인용_week.xlsx')\n",
-    "df_melon_chart_month.to_excel('확인용_month.xlsx')"
+    "df.set_index('순위',inplace=True)\n",
+    "df.to_excel('확인용.xlsx')"
    ]
   },
   {
